--- a/05-Guess-My-Number/starter/index.html
+++ b/05-Guess-My-Number/starter/index.html
@@ -15,10 +15,10 @@
       <div class="number">?</div>
     </header>
     <main>
-      <section class="left">
+      <form class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
-      </section>
+        <input type="submit" class="btn check" value="Check!"></input>
+      </form>
       <section class="right">
         <p class="message">Start guessing...</p>
         <p class="label-score">💯 Score: <span class="score">20</span></p>
